--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -32,12 +32,12 @@
     }
     .toolbar button:hover { background: #f1f5f9; cursor: pointer; }
 
-    /* Prominent, consistent nav arrows */
+    /* Prominent, consistent nav arrows my changes Gene */
     .nav-group button {
-      font-size: 20px;
-      font-weight: 700;
-      padding: 10px 16px;
-      border-width: 2px;
+      font-size: 16px;
+      font-weight: 600;
+      padding: 6px 10px;
+      border-width: 1px;
       background-color: #f8fafc;
       color: #111;
     }
